examples/test/testpolicy6591.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6591
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key31: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value15
          key44: value42
      podSelector:
        matchLabels:
          key9: value27
          key41: value33
